syntax = "proto3";
package lavanet.lava.dualstaking;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lavanet/lava/dualstaking/params.proto";
import "lavanet/lava/dualstaking/delegate.proto";

option go_package = "github.com/lavanet/lava/x/dualstaking/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lavanet/lava/dualstaking/params";
  }

  // Queries a list of ListProjects items.
  rpc DelegatorProviders(QueryDelegatorProvidersRequest) returns (QueryDelegatorProvidersResponse) {
    option (google.api.http).get = "/lavanet/lava/subscription/delegator_providers/{delegator}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryDelegatorProvidersRequest {
  string delegator = 1;
  bool with_pending = 2;
}

message QueryDelegatorProvidersResponse {
  repeated Delegation delegations = 1 [(gogoproto.nullable) = false];
}